# VWAP-IT

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
configs/connectors/: wsb_mock.yaml
docker/: docker-compose.yml
infra/: README.md
infra/terraform/: .gitignore  ecr.tf  ecs.tf  github_actions.tf  iam.tf  observability.tf  outputs.tf  rds.tf  s3.tf  security_groups.tf  sqs.tf  terraform.tfvars.example  tfplan  variables.tf  versions.tf  vpc.tf
scripts/: bootstrap_local.sh  deploy.sh  migrate.sh  push-image.sh  run-migration-aws.sh
src/tip/: cli.py
src/tip/alerts/: slack.py
src/tip/analytics/: indexes.py
src/tip/bus/: outbox_dispatcher.py  sqs.py
src/tip/connectors/: base.py  edgar.py  reddit.py  wsb_mock.py
src/tip/consumers/: __init__.py  base.py  event_processor.py
src/tip/db/: __init__.py  models.py  session.py
src/tip/db/migrations/: 001_init.sql
src/tip/enrichment/: base.py
src/tip/models/: __init__.py  event_schema.json  events.py
src/tip/observability/: metrics.py  server.py
src/tip/replay/: replay.py
src/tip/storage/: s3.py
src/tip/utils/: config.py
src/tip/validation/: schema.py
src/trading_intel_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_schema.py
