[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-intel-platform"
version = "0.0.1"
description = "Foundation v0: Trading Intelligence Platform backbone (ingestion → normalization → enrichment → storage → distribution)"
authors = [{ name = "Goose" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "typer[all]>=0.12",
  "boto3>=1.34",
  "botocore>=1.34",
  "s3fs>=2024.3.1",
  "sqlalchemy[asyncio]>=2.0",
  "psycopg[binary,pool]>=3.2",
  "alembic>=1.13",
  "ujson>=5.10",
  "orjson>=3.10",
  "jsonschema>=4.23",
  "prometheus-client>=0.20",
  "python-json-logger>=2.0",
  "duckdb>=1.1",
  "pyarrow>=17.0",
  "pandas>=2.2",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "slack-sdk>=3.31",
  "backoff>=2.2",
  "tenacity>=9.0",
  "requests>=2.32",
  "aiohttp>=3.10",
  "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "black>=24.8",
  "ruff>=0.6",
  "mypy>=1.11",
  "types-requests",
  "types-PyYAML",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","N","UP","B","C4","DTZ","PIE","PT","RET","SIM","RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
